Integrate redux for the `purchase-order-details-container` component

--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -29,6 +29,8 @@
         GET_ACTIVE_MENU: 'GET_ACTIVE_MENU',
         GET_ALL_MENU: 'GET_ALL_MENU',
         GET_SELECTED_MONTHLY_SPENDINGS: 'GET_SELECTED_MONTHLY_SPENDINGS',
-        GET_SELECTED_ORDERS: 'GET_SELECTED_ORDERS'
+        GET_SELECTED_ORDERS: 'GET_SELECTED_ORDERS',
+        GET_SELECTED_PURCHASE_ORDERS_BY_DISH: 'GET_SELECTED_PURCHASE_ORDERS_BY_DISH',
+        GET_SELECTED_PURCHASE_ORDERS_BY_USER: 'GET_SELECTED_PURCHASE_ORDERS_BY_USER',
     }
 </script>
