Rework redux structure according to new design

--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -180,25 +180,43 @@
             {
                 id: 'Pure',
                 title: 'Пюре',
-                date: new Date("2018-05-03"),
+                date: new Date("2018-06-11"),
                 status: 'correct'
             }, {
                 id: 'Pozitiv',
                 title: 'Позитив',
-                date: new Date("2018-05-03"),
+                date: new Date("2018-06-11"),
+                status: 'correct'
+            },
+            {
+                id: 'Pure',
+                title: 'Пюре',
+                date: new Date("2018-06-10"),
+                status: 'correct'
+            }, {
+                id: 'Pozitiv',
+                title: 'Позитив',
+                date: new Date("2018-06-10"),
                 status: 'incorrect'
             },
             {
                 id: 'Pure',
                 title: 'Пюре',
-                date: new Date("2018-05-02"),
+                date: new Date("2018-06-09"),
                 status: 'correct'
             }, {
                 id: 'Pozitiv',
                 title: 'Позитив',
-                date: new Date("2018-05-02"),
+                date: new Date("2018-06-09"),
+                status: 'incorrect'
+            },
+            {
+                id: 'Pozitiv',
+                title: 'sad',
+                date: new Date("2018-06-09"),
                 status: 'correct'
             }
+
         ];
 
         const allPurchaseOrdersByDish = [{
