Add more redux records for PO by user view

--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -255,8 +255,20 @@
                     quantity: 1
                 }, {title: 'Суп гороховый', quantity: 2}]
             }, {
+                user: 'Виктор Петров',
+                dishes: [{
+                    title: 'Борщ украинский',
+                    quantity: 1
+                }, {title: 'Цезарь', quantity: 6}]
+            }, {
+                user: 'Петр Васисьевич',
+                dishes: [{title: 'Картофель', quantity: 1}, {
+                    title: 'Жареная сельдь',
+                    quantity: 3
+                }, {title: 'Пюре', quantity: 5}]
+            }, {
                 user: 'Алина Рогачева',
-                dishes: [{title: 'Картофель', quantity: 1}]
+                dishes: [{title: 'Рыбной суп', quantity: 4}]
             }]
         }];
 
