--- a/client/user/src/mealorder/meal-order-toolbar.html
+++ b/client/user/src/mealorder/meal-order-toolbar.html
@@ -111,7 +111,7 @@
     <script>
         {
             /**
-             * meal-order-toolbar is container for the `app-toolbar`
+             * `meal-order-toolbar` is container for the `app-toolbar`
              *
              * Contains the main title and the link title and also icon for drawer toggle
              * on depending on menu and history routing.
