--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -74,16 +74,17 @@
 
         <paper-tabs id="paper-tabs" selected="[[selectedDate]]"
                     attr-for-selected='data-key'>
-            <template is="dom-repeat" items="{{displayedDays}}" as="calendar">
+            <template is="dom-repeat" items="{{displayedDays}}" as="day">
                 <paper-tab class="paper-tab"
-                           data-key$="[[_getDate(calendar)]]"
-                           link disabled="[[!calendar.hasMenu]]">
-                    <a href="#/menu/[[_getDate(calendar)]]"
+                           data-key$="[[_getDate(day)]]"
+                           link disabled="[[!_isMenuExists(day)]]">
+                    <a href="#/menu/[[_getDate(day)]]"
                        class="paper-tab-container">
                         <div>
-                            <div class="day-of-the-week">[[_getDayOfTheWeek(calendar)]]
+                            <div class="day-of-the-week">[[_getWeekDayName(day)]]
+                                [[!_isMenuExists(day)]]
                             </div>
-                            <div class="day">[[_getDay(calendar)]]</div>
+                            <div class="day">[[_getDay(day)]]</div>
                         </div>
                     </a>
                 </paper-tab>
@@ -94,13 +95,12 @@
     <script>
         {
             /**
-             * menu-order is container for the vendors' menus and navigation.
+             * `menu-order` is a container for the vendors' menus and navigation.
              *
              * Contains a menu for the current date and tabs for quick date navigation.
              *
              * @customElement
              * @polymer
-             * @appliesMixin MealOrderApp.ReduxMixin
              */
             class MealOrderMenuContainer extends Polymer.Element {
                 static get is() {
@@ -120,33 +120,39 @@
                          * Selected day.
                          */
                         selectedDate: {
-                            type: Object,
+                            type: String,
                         },
 
                         /**
                          * Array of dates with menu which may not exist.
                          *
-                         * @typedef {Object} Date
+                         * @typedef {Date} contains day, month, year and etc.
+                         */
+
+                        /**
                          * @typedef {Boolean} hasMenu If menu for this date exists
                          */
                         displayedDays: {
                             type: Array,
-                            computed: '_getDisplayedDays(menus)'
+                            computed: '_getDisplayedDates(menus)'
                         },
 
                         /**
                          * Menu for a current day.
                          *
                          * @typedef {Object} Menu the menu for the current date
-                         *
                          * @property {String} vendor a vendor name
-                         *
-                         * @typedef {Object} Date contains day, month, year
-                         * @property {Number} day
-                         * @property {Number} month
-                         * @property {Number} year
-                         *
+                         */
+
+                        /**
+                         * @typedef {Date} contains day, month, year and etc.
+                         */
+
+                        /**
                          * @typedef {Array} Categories array contains the category name and dishes
+                         */
+
+                        /**
                          * @typedef {Array} Dishes array contains the dish title, price, quantity
                          * @property {String} title
                          * @property {String} price
@@ -155,6 +161,11 @@
                         menus: {
                             type: Array,
                         },
+                        existingMenu: {
+                            type: Map,
+                            computed: '_getExistingDatesForMenu(menus, displayedDays)'
+                        }
+
                     };
                 }
 
@@ -167,7 +178,7 @@
                     return date.toISOString().slice(0, DATE_LENGTH);
                 }
 
-                _getDayOfTheWeek(date) {
+                _getWeekDayName(date) {
                     const dayOfTheWeek = date.toLocaleDateString("ru-RU", {weekday: 'short'});
                     return dayOfTheWeek.charAt(0).toUpperCase() + dayOfTheWeek.slice(1);
                 }
@@ -178,9 +189,8 @@
                     return menus.filter(menu => menu.date.getTime() === routeDate.getTime());
                 }
 
-                _getDisplayedDays(menus) {
+                _getDisplayedDates() {
                     const weekDates = [];
-                    const menuDates = [];
                     const DAYS_IN_PERIOD = 8;
 
                     for (let i = 0; i < DAYS_IN_PERIOD; i++) {
@@ -188,23 +198,30 @@
                         newDate.setDate(newDate.getDate() + i);
                         weekDates.push(newDate);
                     }
-
-                    const dates = menus.filter(menu => menu.date);
-                    for (let i = 0; i < dates.length; i++) {
-                        menuDates.push(dates[i].date);
-                    }
-
-                    const uniqueDates = menuDates.map(s => s.toString())
-                        .filter((s, i, a) => a.indexOf(s) === i)
-                        .map(s => new Date(s));
-
-                    for (let i = 0; i < uniqueDates.length; i++) {
-                        if (weekDates[i].getTime() === uniqueDates[i].getTime()) {
-                            weekDates[i].hasMenu = true;
-                        }
-                    }
                     return weekDates;
                 }
+
+                _getExistingDatesForMenu(menus, dates) {
+                    const existingDates = new Map();
+                    Array.prototype.indexOfDate = function (date) {
+                        for (let i = 0; i < this.length; i++) {
+                            if (this[i].getTime() === date.getTime())
+                                return i;
+                        }
+                    };
+
+                    menus.reduce((arr, el) => {
+                        if (el.date) {
+                            existingDates.set(dates[dates.indexOfDate(el.date)], el);
+                        }
+                    });
+                    return existingDates;
+                }
+
+                _isMenuExists(date) {
+                    return this.existingMenu.has(date);
+                }
+
             }
 
             window.customElements.define(MealOrderMenuContainer.is, MealOrderMenuContainer);
