--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -61,6 +61,8 @@
             </app-header-layout>
 
         </app-drawer-layout>
+
+        <h1>MealOrder application</h1>
     </template>
 
     <script>
